# esp32c3_gh3036_8

./: .gitignore  CLAUDE.md  CMakeLists.txt
components/algo_lib_0206/GH_HR_bas_pv_v1.0.2.0/00-算法库文件/: arm9e_keil-armcc-5.06_o3_hr.lib  cortex-a53_armclang-6.18_os_hr.lib  cortex-m0+_keil-armcc-5.06_o2_hr.lib  cortex-m0_keil-armcc-5.06_o2_hr.lib  cortex-m3_keil-armcc-5.06_o2_hr.lib  cortex-m4_keil-armcc-5.06_ospace_hr.lib  (+1 more)
components/algo_lib_0206/dlCom_pre2exc_pv_v1.3.0/: cortex-a53_armclang-6.18_os_common_dl.lib  cortex-a5_armcc-5.06u4_o3_common_dl.lib  cortex-m3_keil-armcc-5.06_o2_common_dl.lib  cortex-m3_keil-armcc-5.06_ospace_common_dl.lib  cortex-m4_keil-armcc-5.06_o0+hard_common_dl.lib  cortex-m4_keil-armcc-5.06_o0_common_dl.lib  cortex-m4_keil-armcc-5.06_o3_common_dl.lib  cortex-m7_keil-armcc-5.06_o3_common_dl.lib
components/gh3036_drvlib_0206/libs/: cortex-a53_armclang-6.18_os_gh3036drv.lib  cortex-m0_keil-armcc-5.06_o2_gh3036drv.lib  cortex-m3_keil-armcc-5.06_o2_gh3036drv.lib  cortex-m3_keil-armcc-5.06_ospace_gh3036drv.lib  cortex-m4_keil-armcc-5.06_o0_gh3036drv.lib  cortex-m4_keil-armcc-5.06_o2+soft_gh3036drv.lib  cortex-m4_keil-armcc-5.06_o2_gh3036drv.lib  cortex-m4_keil-armcc-5.06_o3_gh3036drv.lib
components/gh3036_sdk/: CMakeLists.txt  Kconfig  Kconfig.algo  Kconfig.app  Kconfig.hal  Kconfig.protocol  README.md
components/gh3036_sdk/gh_algo/adt/: gh_move_detector.c  gh_move_detector.h  gh_wear_detector.c  gh_wear_detector.h
components/gh3036_sdk/gh_algo/common/: cortex-m4_keil-armcc-5.06_o2_common_dsp.lib  goodix_log.h  goodix_mem.h  goodix_type.h
components/gh3036_sdk/gh_algo/common/basic_medium/: cortex-m4_keil-armcc-5.06_o2_common_dl.lib
components/gh3036_sdk/gh_algo/hr/basic/: HRNet_knBasicWeights.c  HRNet_knSceneNetWeights.c  HRNet_knSceneSwitchWeights.c  HRNet_knWeights.c  cortex-m4_keil-armcc-5.06_o2_hr.lib  goodix_hba.h  goodix_mem_config_hr.h
components/gh3036_sdk/gh_algo/hr/exclusive/: HRNet_knConfNetWeights.c  HRNet_knSceneSwitchWeights.c  HRNet_knTdfusionWeights.c  HRNet_knWeights.c  cortex-m4_keil-armcc-5.06_o2_hr.lib  goodix_hba.h  goodix_hba_config.c  goodix_mem_config_hr.h
components/gh3036_sdk/gh_algo/hr/medium/: HRNet_knConfNetWeights.c  HRNet_knMultiWeights.c  HRNet_knSmallWeights.c  goodix_hba_config.c  goodix_mem_config_hr.h
components/gh3036_sdk/gh_algo/hr/premium/: HRNet_knBasicWeights.c  HRNet_knConfNetWeights.c  HRNet_knMultiWeights.c  HRNet_knSceneNetWeights.c  HRNet_knSceneSwitchWeights.c  HRNet_knTdfusionWeights.c  HRNet_knWeights.c  goodix_hba.h  goodix_hba_config.c  goodix_mem_config_hr.h
components/gh3036_sdk/gh_algo/hrv/: cortex-m4_keil-armcc-5.06_o2_hrv.lib  goodix_hrv.h  goodix_hrv_config.c  goodix_mem_config_hrv.h
components/gh3036_sdk/gh_algo/nadt/: goodix_mem_config_nadt.h  goodix_nadt.h  goodix_nadt_config.c
components/gh3036_sdk/gh_algo/spo2/basic/: goodix_mem_config_spo2.h  goodix_spo2.h  goodix_spo2_config_for_gh3036_a43992.c
components/gh3036_sdk/gh_algo/spo2/premium/: goodix_mem_config_spo2.h  goodix_spo2.h  goodix_spo2_config_for_gh3036_a43992.c  goodix_spo2_net_for_gh3036_a43992.c
components/gh3036_sdk/gh_app/inc/: gh_algo_adapter.h  gh_algo_adapter_common.h  gh_algo_adt.h  gh_algo_hr.h  gh_algo_hrv.h  gh_algo_mem.h  gh_algo_nadt.h  gh_algo_spo2.h  gh_app.h  gh_app_common.h  gh_app_manager.h  gh_app_mips.h  gh_app_user.h  gh_config_process.h  gh_data_common.h  gh_data_fusion.h  gh_data_sync_fusion.h  gh_global_config.h  gh_mtss_evt_manager.h  gh_public_api.h  gh_reg_config.h  gh_sample_ctrl.h  goodix_algo_memory.h
components/gh3036_sdk/gh_app/src/: gh_app.c  gh_app_mips.c  gh_app_user.c  gh_config_process.c  gh_global_config.c  gh_reg_config.c  gh_sample_ctrl.c  goodix_app_user.c
components/gh3036_sdk/gh_app/src/app_fusion/: gh_data_fusion.c  gh_data_sync_fusion.c
components/gh3036_sdk/gh_app/src/app_manager/: gh_algo_adapter.c  gh_algo_adt.c  gh_algo_hr_third_party.c  gh_algo_hrv_third_party.c  gh_algo_mem.c  gh_algo_nadt_third_party.c  gh_algo_spo2_third_party.c  gh_app_manager.c
components/gh3036_sdk/gh_app/src/app_mtss/: gh_mtss_evt_manager.c
components/gh3036_sdk/gh_auto_config/: gh_auto_config_kconfig.h
components/gh3036_sdk/gh_hal/hw_interface/inc/: gh3036_reg.h  gh_hal_chip.h  gh_hal_interface.h
components/gh3036_sdk/gh_hal/hw_interface/src/: gh_hal_chip.c  gh_hal_interface.c
components/gh3036_sdk/gh_hal/hw_service/inc/: gh_hal_agc.h  gh_hal_agc_dre.h  gh_hal_common.h  gh_hal_config.h  gh_hal_config_process.h  gh_hal_control.h  gh_hal_fifo_parser.h  gh_hal_isr.h  gh_hal_log.h  gh_hal_service.h  gh_hal_settings.h  gh_hal_std.h  gh_hal_user.h  gh_hal_utils.h
components/gh3036_sdk/gh_hal/hw_service/src/: gh_hal_agc.c  gh_hal_agc_dre.c  gh_hal_common.c  gh_hal_common.lib  gh_hal_config_process.c  gh_hal_control.c  gh_hal_fifo_parser.c  gh_hal_isr.c  gh_hal_service.c  gh_hal_settings.c  gh_hal_std.c  gh_hal_user.c  gh_hal_utils.c
components/gh3036_sdk/gh_protocol/: gh_data_package.c  gh_data_package.h  gh_errorcode.h  gh_package.c  gh_package.h  gh_packagedata.h  gh_protocol_cmd.c  gh_protocol_cmd.h  gh_protocol_user.c  gh_protocol_user.h  gh_rpc_functions.h  gh_rpc_functions.txt  gh_rpccore.c  gh_rpccore.h  slabmemory.c  slabmemory.h  slabmemorydata.h  staticmapimp.c  staticmapimp.h
docs/Chelsea_A(GH3036)/: ChelseaA发布资料_2025-12-30(1).xlsx
docs/Chelsea_A(GH3036)/2.硬件设计/: GH3036&GH3038 LED选型设计评估表格_V0.1 for customer(1).xlsx  GH3036(1.88X1.88X0.46)_POD_V1.1(1).vsd  GH3036(1.88X1.88X0.46)_POD_V1.1.dwg  GH3036_Reference_BOM_Rev.1.0(1).xlsx  GH3038(1.88X1.88X0.46)_POD_V1.0.dwg  GH3038Q_Reference_BOM_Rev.1.0.xlsx  GH3038_Reference_BOM_Rev.1.0(1).xlsx  GH303X原理图&PCB审核CheckList_V1.0(1).xlsx
docs/Chelsea_A(GH3036)/6.产测设计/: B0版本_PPG_EVK_硬件指标测试_20250714(1).xlsx
docs/Chelsea_A(GH3036)/7.性能报告/: GH303X_Test case_Rev 1.0.xlsx
main/: CMakeLists.txt  ppg_main.c
main/host_computer/: serial_monitor.py
main/user/inc/: gh_demo_api.h  gh_demo_reg_lists.h
main/user/src/: gh_app_user.c  gh_demo_api.c  gh_demo_reg_lists.c  gh_hal_user.c  gh_protocol_user.c
(+166 files in other folders)
